# FlashVSR-Pro

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  config.yaml  entrypoint.sh  infer.py  pyproject.toml  requirements.txt  setup.py  simple_infer_tiny.py
Block-Sparse-Attention/: pyproject.toml  setup.py
FlashVSR/: README.md
diffsynth/models/: wan_video_dit.py  wan_video_vae.py
diffsynth/pipelines/: flashvsr_full.py  flashvsr_tiny.py  flashvsr_tiny_long.py  hunyuan_image.py
diffsynth/sparse_sage/: __init__.py
flashvsr_scope_plugin/: __init__.py  pipeline.py  schema.py
flashvsr_utils/core/: TCDecoder.py  __init__.py  utils.py
flashvsr_utils/processing/: __init__.py  tile_utils.py
flashvsr_utils/vae/: __init__.py  vae_system.py
scope/: schema.py
scope_plugin/: pipeline.py
src/flashvsr_scope/: pipeline.py  schema.py
utils/: TCDecoder.py  __init__.py  audio_utils.py  tile_utils.py  vae_loaders.py  vae_manager.py
utils/processing/: audio_utils.py
utils/vae/: vae_system.py
